--- a/Views/Item/CreateItem.cshtml
+++ b/Views/Item/CreateItem.cshtml
@@ -45,7 +45,7 @@ else
     </div>
 }
 <div>
-    <a asp-action="CreateItem">Back to List</a>
+    <a asp-action="Index">Back to Catalog</a>
 </div>
 
 @section Scripts {
