--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,8 +50,10 @@
                             <li class="nav-item">
                                 <p>@_httpContextAccessor.HttpContext.Session.GetString("Email")</p>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Logout">Log Out</a>
+                            </li>
                         }
-
                     </ul>
                 </div>
             </div>
