--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -7,8 +7,9 @@
 <h1>Items Catalog</h1>
 
 <p>
-    <a asp-action="CreateItem">Create New</a>
+    <a asp-action="CreateItem" asp-controller="Items">Create New</a>
 </p>
+@if (Model.Count() != 0) {
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -51,3 +52,7 @@
 }
     </tbody>
 </table>
+}
+else {
+    <h2>No items found.</h2>
+}
