--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Item>
+﻿@model ItemsCatalogViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -9,27 +9,28 @@
 <p>
     <a asp-action="CreateItem" asp-controller="Items">Create New</a>
 </p>
-@if (Model.Count() != 0) {
+@if (Model.Items.Count() != 0) {
 <table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ItemId)
+                    @Html.DisplayNameFor(model => model.Items[0].ItemId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                    @Html.DisplayNameFor(model => model.Items[0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                    @Html.DisplayNameFor(model => model.Items[0].Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                    @Html.DisplayNameFor(model => model.Items[0].Price)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+            @foreach (var item in Model.Items)
+            {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.ItemId)
@@ -55,4 +56,9 @@
 }
 else {
     <h2>No items found.</h2>
+}
+
+@for (int i = 1; i <= Model.LastPage; i++)
+{
+    <a href="@i">@i </a>    
 }
